aws/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petshop-demo
  labels:
    name: petshop-demo
